// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadable should render LazyComponent after waiting for it to load 1`] = `
<div>
  My lazy-loaded component
</div>
`;

exports[`loadable should render fallback if given one 1`] = `
<div>
  Loading
</div>
`;

exports[`loadable should render null by default 1`] = `null`;

exports[`loadable should render null by default with empty options 1`] = `null`;
